# gamepad_lib

./: CMakeLists.txt  readme.md
examples/: gamepad_lib_test.cpp
include/: gamepad_lib.hpp
src/: gamepad_lib.cpp
